# kerbal-controller

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  STM32L433RCTXP_FLASH.ld  compile_commands.json  run.sh  startup_stm32l433rctxp.s
app/src/: main.c  stm32l4xx_it.c
bsp/: bsp.c  button.c  serial.c  systick.c
bsp/inc/: bsp.h
bsp/src/: button.c  led.c  systick.c  uart.c
docs/: DEVELOPMENT.md
inc/: bsp.h
include/: ringbuffer.h  simpit.h  simpit_message_types.h  timers.h  uart.h
lib/simpit/inc/: simpit.h  simpit_message_types.h
lib/simpit/src/: simpit.c
lib/utils/src/: ringbuffer.c
src/: app.h  main.c  ringbuffer.c  simpit.c  stm32l4xx_it.c  stm32l4xx_it.h  syscalls.c  timers.c  uart.c
src/hal/: button.c  hal.c  led.c  serial.c  stm32l4xx_it.c  systick.c  uart.c
src/simpit/: simpit.c
utils/inc/: ringbuffer.h
utils/src/: ringbuffer.c
